@@ -1,0 +1,23 @@
+[RWP]
+DataPath=/usr/local/lib/sword/modules/comments/rawcom/rwp/
+ModDrv=RawCom
+Description=Robertson's Word Pictures
+About=\qc -=+* see the files 'about.txt', 'title.pg', 'rwp.int', 'read.me', and \
+'correct.txt' for more details *+=- \par\par \
+ Robertson's \par Word Pictures in the \par New Testament \par\par \
+A.T. Robertson, A.M., D.D., LL. D., Litt.D. \par\par\pard \
+Vol 1,2,3,4  Public Domain -- Copy Freely \par\par Volume 5 (c) 1932. \par \
+Renewal 1960 Broadman Press.  All rights reserved. \par Used by permission. \par \
+[Copyright expires Dec. 31, 2006.] \par\par Volume 6 (c) 1933. \par \
+Renewal 1960 Broadman Press.  All rights reserved. \par Used by permission. \par \
+[Copyright expires Dec. 31, 2007.] \par\par \
++---------------      Copy Freely     --------------+ \par\par \
+	The current files can be found at: \par\par \
+	The Bible Foundation, \par \
+	http://www.bf.org \par\par \
+	If any errors are located, please notify me at the above location, or at: \par\par \
+	Mark Fuller \par \
+	1129 E. Loyola Dr. \par \
+	Tempe, Az. 85282 \par \
+	(602) 829-8542
+
