@@ -1,0 +1,18 @@
+[Vines]
+DataPath=/usr/local/lib/sword/modules/lexdict/rawld/vines/vines
+ModDrv=RawLD
+Description=Vines Bible Dictionary
+About=\qc Vine's Expository Dictionary \par of New Testament Words \par\par \
+Public Domain -- Copy Freely \par\par\pard \
+	These Dictionary topics are from W.E. Vine's M.A., Expository Dictionary of New Testament \
+Words published in 1940 and without copyright. \par\par \
+	The most current and correct copies of these files can be obtained from the \
+following.  If any errors are located, please ensure you have the latest files, and if so, \
+we would appreciate being informed of the error. \par\par \
+	The Bible Foundation \par \
+	http://www.bf.org \par\par \
+	Or by contacting: \par\par \
+	Mark Fuller \par \
+	1129 East Loyola Drive \par \
+	Tempe, Arizona, 85282 \par \
+	602-829-8542 (voice)
